# minimalisp

./: .gitignore  AUTHORS  INSTALL  Makefile.am  README.md  configure.ac  fix_configure_ac.py  maths.py  minimalisp.py  notes-on-number-formats.md  notes-on-quotes.md  notes-on-single-line-functions.md  notes-on-the-standard-library.md  notes-on-the-standard-library.txt  parse.py  regen_autotools.sh  setup.py  sm.l  smallest_broken.l  stdlib.l  test_0_0_1.l  test_0_0_2.l  test_0_1_0.l  test_0_1_1.l  values.py  vm.py
cfg_parser/: grammar.y  import.c  lex.h  makefile  tokens.lex
cfg_parser/libs/: array.c  array.h  stack.c  stack.h
include/: object.h  ram.h  values.h
minimalisp/: maths.py  stdlib.l  stdlib.py  values.py  vm.py
notes/: notes-on-a-c-implementation.md  notes-on-contexts.md  notes-on-recursion-or-looping.md  notes-on-the-standard-library.md  notes-on-while.md
scripts/: minimalisp  test_parse.py
src/: parse.c  parse.h  ram.c  values.c
tests/: apply.l  arg_eval_order_test.l  comparisons.l  dowhile.l  eval.l  hello_world.l  imported.l  importer.l  run_this.l  should_print_0.l  tutorial.l  valid.l  while.l
unit_tests/: test_parse.c  test_values.c
